--- a/SUSI_App.vcxproj.filters
+++ b/SUSI_App.vcxproj.filters
@@ -54,4 +54,7 @@
       <Filter>소스 파일\util</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.md" />
+  </ItemGroup>
 </Project>
